--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   auto_size_text: ^2.1.0
   hawk_fab_menu: ^0.3.2
+  flutter_svg: ^0.18.1
 
 dev_dependencies:
   flutter_test:
