--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   auto_size_text: ^2.1.0
   hawk_fab_menu: ^0.3.2
   flutter_svg: ^0.18.1
+  sqflite: ^1.3.1+1
+  path_provider: ^1.6.14
 
 dev_dependencies:
   flutter_test:
